k8s/deploy-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-deployment
  namespace: multi-app
  labels:
    component: worker
spec:
  replicas: 1
  selector:
    matchLabels:
      component: worker
  template:
    metadata:
      labels:
        component: worker
    spec:
      containers:
        - name: worker
          image: asia-east1-docker.pkg.dev/k8stest-478013/multik8s-repo/multi-worker:latest
          resources:
            requests:
              cpu: "50m"
              memory: "128Mi"
              ephemeral-storage: "512Mi"
            limits:
              cpu: "250m"
              memory: "512Mi"
              ephemeral-storage: "512Mi"
