k8s/deploy-client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
  namespace: multi-app
  labels:
    component: web
spec:
  replicas: 3
  selector:
    matchLabels:
      component: web
  template:
    metadata:
      labels:
        component: web
    spec:
      containers:
        - name: client
          image: asia-east1-docker.pkg.dev/k8stest-478013/multik8s2-repo/multi-client:latest
          resources:
            requests:
              cpu: "50m"
              memory: "128Mi"
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: client-clusterip-service
  namespace: multi-app
spec:
  type: ClusterIP
  selector:
    component: web
  ports:
    - port: 3000
      targetPort: 3000
