k8s/deploy-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
  namespace: multi-app
  labels:
    component: server
spec:
  replicas: 3
  selector:
    matchLabels:
      component: server
  template:
    metadata:
      labels:
        component: server
    spec:
      containers:
        - name: server
          image: asia-east1-docker.pkg.dev/k8stest-478013/multik8s2-repo/multi-server:latest
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: server-clusterip-service
  namespace: multi-app
  labels:
    component: server
spec:
  type: ClusterIP
  selector:
    component: server
  ports:
    - port: 5000
      targetPort: 5000
